--- a/WooshCardTableViewCell.xib
+++ b/WooshCardTableViewCell.xib
@@ -45,7 +45,7 @@
 							<object class="IBUIImageView" id="886500146">
 								<reference key="NSNextResponder" ref="791673390"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{8, 8}, {70, 70}}</string>
+								<string key="NSFrame">{{17, 8}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="791673390"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="783627983"/>
@@ -56,10 +56,9 @@
 							<object class="IBUILabel" id="783627983">
 								<reference key="NSNextResponder" ref="791673390"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{86, 8}, {214, 28}}</string>
+								<string key="NSFrame">{{94, 8}, {214, 28}}</string>
 								<reference key="NSSuperview" ref="791673390"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -92,10 +91,9 @@
 							<object class="IBUIButton" id="970387027">
 								<reference key="NSNextResponder" ref="791673390"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{86, 44}, {194, 35}}</string>
+								<string key="NSFrame">{{94, 44}, {194, 35}}</string>
 								<reference key="NSSuperview" ref="791673390"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -151,10 +149,9 @@
 				<integer value="80" key="IBUIRowHeight"/>
 			</object>
 			<object class="IBUILabel" id="75484436">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<string key="NSFrameSize">{42, 21}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -252,21 +249,37 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="487563805">
-								<reference key="firstItem" ref="970387027"/>
+							<object class="IBNSLayoutConstraint" id="605323509">
+								<reference key="firstItem" ref="783627983"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="886500146"/>
-								<int key="secondAttribute">6</int>
+								<reference key="secondItem" ref="779850285"/>
+								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">94</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="779850285"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="1057972836">
+								<reference key="firstItem" ref="783627983"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="970387027"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="779850285"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">3</int>
+								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="280123963">
 								<reference key="firstItem" ref="783627983"/>
@@ -284,36 +297,20 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="387907407">
-								<reference key="firstItem" ref="779850285"/>
-								<int key="firstAttribute">6</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="783627983"/>
-								<int key="secondAttribute">6</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">20</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="779850285"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="562978138">
-								<reference key="firstItem" ref="783627983"/>
+							<object class="IBNSLayoutConstraint" id="318512539">
+								<reference key="firstItem" ref="886500146"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="886500146"/>
-								<int key="secondAttribute">6</int>
+								<reference key="secondItem" ref="779850285"/>
+								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">17</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="779850285"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="423367082">
@@ -348,9 +345,9 @@
 								<float key="scoringTypeFloat">22</float>
 								<int key="contentType">2</int>
 							</object>
-							<reference ref="886500146"/>
 							<reference ref="783627983"/>
 							<reference ref="970387027"/>
+							<reference ref="886500146"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -427,11 +424,6 @@
 						<reference key="parent" ref="779850285"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">31</int>
-						<reference key="object" ref="387907407"/>
-						<reference key="parent" ref="779850285"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">47</int>
 						<reference key="object" ref="970387027"/>
 						<array class="NSMutableArray" key="children">
@@ -471,11 +463,6 @@
 						<reference key="parent" ref="779850285"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">29</int>
-						<reference key="object" ref="562978138"/>
-						<reference key="parent" ref="779850285"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">83</int>
 						<reference key="object" ref="423367082"/>
 						<reference key="parent" ref="779850285"/>
@@ -489,11 +476,6 @@
 						<int key="objectID">86</int>
 						<reference key="object" ref="321822169"/>
 						<reference key="parent" ref="783627983"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">87</int>
-						<reference key="object" ref="487563805"/>
-						<reference key="parent" ref="779850285"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">88</int>
@@ -520,6 +502,21 @@
 						<reference key="object" ref="280123963"/>
 						<reference key="parent" ref="779850285"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">129</int>
+						<reference key="object" ref="318512539"/>
+						<reference key="parent" ref="779850285"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">137</int>
+						<reference key="object" ref="1057972836"/>
+						<reference key="parent" ref="779850285"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">138</int>
+						<reference key="object" ref="605323509"/>
+						<reference key="parent" ref="779850285"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -528,16 +525,19 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="100.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="110.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="129.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="137.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="138.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">WooshCardTableViewCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="2.IBViewMetadataConstraints">
 					<reference ref="195829767"/>
 					<reference ref="423367082"/>
-					<reference ref="562978138"/>
-					<reference ref="387907407"/>
+					<reference ref="318512539"/>
 					<reference ref="280123963"/>
-					<reference ref="487563805"/>
+					<reference ref="1057972836"/>
+					<reference ref="605323509"/>
 					<reference ref="390476188"/>
 				</array>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -547,13 +547,11 @@
 					<reference ref="904002710"/>
 				</array>
 				<boolean value="NO" key="28.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
-				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="3.IBViewMetadataConstraints">
 					<reference ref="972476676"/>
 				</array>
 				<boolean value="NO" key="3.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
-				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="47.IBViewMetadataConstraints">
 					<reference ref="552773557"/>
@@ -563,7 +561,6 @@
 				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="86.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="87.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="88.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="91.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="92.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -572,7 +569,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">111</int>
+			<int key="maxID">138</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
